--- a/.env-local
+++ b/.env-local
@@ -2,7 +2,7 @@ APP_NAME=asifulmamun
 APP_ENV=local
 APP_KEY=base64:7N0vy6fYNSo0rpM4XrPz9sG6DG7UYvD/Ylje/K/qI+g=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://asifulmamun.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -62,3 +62,7 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
+
+
+WWWUSER=1000
+WWWGROUP=1000
