--- a/.env-local
+++ b/.env-local
@@ -64,5 +64,29 @@ MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_NO_ANALYTICS=false
 
 
-WWWUSER=1000
-WWWGROUP=1000
+# WWWUSER=1000
+# WWWGROUP=1000
+
+
+##### NGINX ################################################# https://github.com/acadea/laravel-sail-nginx-php-fpm/blob/main/.env.example
+
+#### DOCKER
+FORWARD_DB_PORT=
+
+# Point to the path of your applications code on your host
+APP_CODE_PATH_HOST=./
+
+# Point to where the `APP_CODE_PATH_HOST` should be in the container
+APP_CODE_PATH_CONTAINER=/var/www/laravel/current
+
+# You may add flags to the path `:cached`, `:delegated`. When using Docker Sync add `:nocopy`
+APP_CODE_CONTAINER_FLAG=:cached
+
+
+NGINX_HOST_HTTP_PORT=80
+NGINX_HOST_HTTPS_PORT=443
+NGINX_HOST_LOG_PATH=./docker/logs/nginx/
+NGINX_SITES_PATH=./docker/nginx/sites/
+NGINX_PHP_UPSTREAM_CONTAINER=php-fpm
+NGINX_PHP_UPSTREAM_PORT=9000
+NGINX_SSL_PATH=./docker/nginx/ssl/
