--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "clear": "clear && php artisan clear-compiled && php artisan optimize && composer dump-autoload && composer dump-autoload -o && php artisan route:clear && php artisan view:clear && php artisan cache:clear && php artisan config:cache && php artisan config:clear",
+        "serve": "clear && php artisan cache:clear && php artisan config:cache && php artisan config:clear && php artisan route:clear && php artisan view:clear && php artisan serve"
     },
     "devDependencies": {
         "axios": "^1.1.2",
